<resources>
    <string name="app_name">Playlist maker</string>
    <string name="title_search">Поиск</string>
    <string name="title_media">Медиатека</string>
    <string name="title_setting">Настройки</string>
    <string name="title_dark">Тёмная тема</string>
    <string name="title_share">Поделиться приложением</string>
    <string name="title_support">Написать в поддержку</string>
    <string name="title_agreement">Пользовательское соглашение</string>
</resources>