<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_700"
    android:padding="@dimen/padding_size"
    android:id="@+id/mainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        android:fontFamily="@font/ys_display_regular"/>
    <Button
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:icon="@drawable/ic_search_icon"
        android:id="@+id/searchId"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black"
        app:cornerRadius="@dimen/radius_size"
        android:text="@string/title_search"
        android:textColor="@color/black"
        android:layout_weight="1"/>
    <Button
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:icon="@drawable/ic_icon_library"
        android:id="@+id/libraryId"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black"
        app:cornerRadius="@dimen/radius_size"
        android:text="@string/title_media"
        android:textColor="@color/black"
        android:layout_weight="1"/>
    <Button
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:icon="@drawable/ic_setting_icon"
        android:id="@+id/settingId"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black"
        app:cornerRadius="@dimen/radius_size"
        android:text="@string/title_setting"
        android:textColor="@color/black"
        android:layout_weight="1"/>
</LinearLayout>