<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="@dimen/text_size"
    tools:context=".SettingActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/icon_padding"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/icon_padding"
            android:padding="@dimen/icon_padding"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_arrow_back"
            android:id="@+id/arrow_back"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="end"
            android:padding="@dimen/icon_padding"
            android:text="@string/title_setting"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black"
            />

    </FrameLayout>
    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:checked="false"
        android:text="@string/title_dark"
        android:textSize="@dimen/text_size_menu"
        app:showText="true"
        android:paddingTop="@dimen/icon_padding"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_share"
            android:textSize="@dimen/text_size_menu"
            android:textColor="@color/black"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_icon_share"
            android:layout_gravity="end"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_support"
            android:textSize="@dimen/text_size_menu"
            android:textColor="@color/black"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_setting_icon_full"
            android:layout_gravity="end"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_agreement"
            android:textSize="@dimen/text_size_menu"
            android:textColor="@color/black"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_vector"
            android:layout_gravity="end"/>
    </FrameLayout>

</LinearLayout>